# c-template

./: CMakeLists.txt  README.md
src/: main.c
